force-app/main/default/objects/AcademicYear/AcademicYear.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>