force-app/main/default/objects/AcademicYear/fields/Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Category_Id__c</fullName>
    <label>Category Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>