force-app/main/default/objects/AcademicYear/fields/Future_Year__c.field-meta.xml
<CustomField>
    <fullName>Future_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Year</label>
    <type>Checkbox</type>
</CustomField>