force-app/main/default/objects/AcademicYear/fields/Is_this_Current_year__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether this year is current year or not</description>
    <label>Is this Current year</label>
    <type>Checkbox</type>
</CustomField>