force-app/main/default/objects/AcademicYear/fields/Last_Academic_year__c.field-meta.xml
<CustomField>
    <fullName>Last_Academic_year__c</fullName>
    <formula>TEXT(VALUE(LEFT( Name , 4))-1)+&apos;-&apos;+TEXT(VALUE(RIGHT( Name , 4))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Academic year</label>
    <type>Text</type>
</CustomField>