force-app/main/default/objects/AcademicYear/listViews/All_AcademicYears.listView-meta.xml
<ListView>
    <fullName>All_AcademicYears</fullName>
    <columns>Name</columns>
    <columns>Last_Academic_year__c</columns>
    <columns>Next_Academic_year__c</columns>
    <columns>Is_this_Current_year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Academic Years</label>
</ListView>